1. add logger, 2. add training from given checkpoint

--- a/Image_embedding.ipynb
+++ b/Image_embedding.ipynb
@@ -28,7 +28,10 @@
     "from img_embedding import ImageEmbedding\n",
     "from img_util import show_img_tensor_CHW\n",
     "\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
@@ -78,10 +81,10 @@
     "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = (\n",
     "    next(iter(train_dataloader))\n",
     ")\n",
-    "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
-    "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")\n",
+    "logger.info(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
+    "logger.info(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
+    "logger.info(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "logger.info(f\"batch_comment_mask: {batch_comment_mask.size()}\")\n",
     "show_img_tensor_CHW(img_tensor=batch_img_tensor[0])"
    ]
   },
@@ -101,7 +104,7 @@
    "source": [
     "img_embedding = ImageEmbedding(config=config)\n",
     "img_embedding = img_embedding(batch_img_tensor)\n",
-    "print(f\"img_encoding: {img_embedding.size()}\")"
+    "logger.info(f\"img_encoding: {img_embedding.size()}\")"
    ]
   },
   {
