--- a/coco_img_comments.ipynb
+++ b/coco_img_comments.ipynb
@@ -22,7 +22,10 @@
     "import pandas as pd\n",
     "\n",
     "from config import Config\n",
-    "from coco_data_source import load_coco_data_items"
+    "from coco_data_source import load_coco_data_items\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "logger = get_logger(__name__)\n"
    ]
   },
   {
@@ -41,7 +44,7 @@
    "source": [
     "config = Config()\n",
     "coco_data_items = load_coco_data_items(config=config)\n",
-    "print(len(coco_data_items))"
+    "logger.info(len(coco_data_items))"
    ]
   },
   {
