--- a/fliker_comment_tokenizer.ipynb
+++ b/fliker_comment_tokenizer.ipynb
@@ -28,7 +28,10 @@
     "from fliker_comment_tokenizer import FlikerCommentTokenizer\n",
     "from pathlib import Path\n",
     "from transformers import AutoTokenizer\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
@@ -41,14 +44,15 @@
      "output_type": "stream",
      "text": [
       "Loaded 158915 fliker image-caption data items.\n",
-      "Loaded 591753 coco image-caption data items.\n"
+      "Loaded 591753 coco image-caption data items.\n",
+      "Loaded 768536 visual-genome image-caption data items.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 751/751 [00:01<00:00, 587.73it/s]\n"
+      "100%|██████████| 1520/1520 [00:02<00:00, 660.77it/s]\n"
      ]
     },
     {
@@ -107,9 +111,9 @@
     "# test_data = \"hello, 會 員\"\n",
     "test_data = \"<image><bos>cheng bai<pad><eos>\"\n",
     "test_data_encoded = new_fliker_comment_toeknizer.encode(test_data)\n",
-    "print(f\"encoded: {test_data_encoded}\")\n",
+    "logger.info(f\"encoded: {test_data_encoded}\")\n",
     "test_data_decoded = new_fliker_comment_toeknizer.decode(test_data_encoded)\n",
-    "print(f\"decode: {test_data_decoded}\")"
+    "logger.info(f\"decode: {test_data_decoded}\")"
    ]
   },
   {
@@ -130,11 +134,11 @@
     }
    ],
    "source": [
-    "print(f\"<image>: {new_fliker_comment_toeknizer.encode('<image>')}\")\n",
-    "print(f\"<bos>: {new_fliker_comment_toeknizer.encode('<bos>')}\")\n",
-    "print(f\"<eos>: {new_fliker_comment_toeknizer.encode('<eos>')}\")\n",
-    "print(f\"<pad>: {new_fliker_comment_toeknizer.encode('<pad>')}\")\n",
-    "print(f\"cheng bai: {new_fliker_comment_toeknizer.encode('cheng bai')}\")"
+    "logger.info(f\"<image>: {new_fliker_comment_toeknizer.encode('<image>')}\")\n",
+    "logger.info(f\"<bos>: {new_fliker_comment_toeknizer.encode('<bos>')}\")\n",
+    "logger.info(f\"<eos>: {new_fliker_comment_toeknizer.encode('<eos>')}\")\n",
+    "logger.info(f\"<pad>: {new_fliker_comment_toeknizer.encode('<pad>')}\")\n",
+    "logger.info(f\"cheng bai: {new_fliker_comment_toeknizer.encode('cheng bai')}\")"
    ]
   },
   {
@@ -176,7 +180,7 @@
     "\n",
     "for k, v in new_fliker_comment_toeknizer.vocab.items():\n",
     "    if v == 0:\n",
-    "        print(k)\n",
+    "        logger.info(k)\n",
     "        break"
    ]
   },
