--- a/img_transformer.ipynb
+++ b/img_transformer.ipynb
@@ -29,7 +29,10 @@
     "from img_embedding import ImageEmbedding\n",
     "from img_util import show_img_tensor_CHW\n",
     "\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
@@ -71,10 +74,10 @@
     "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = (\n",
     "    next(iter(train_dataloader))\n",
     ")\n",
-    "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
-    "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")\n",
+    "logger.info(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
+    "logger.info(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
+    "logger.info(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "logger.info(f\"batch_comment_mask: {batch_comment_mask.size()}\")\n",
     "\n",
     "show_img_tensor_CHW(img_tensor=batch_img_tensor[0])"
    ]
@@ -96,11 +99,11 @@
    "source": [
     "img_embedding = ImageEmbedding(config=config)\n",
     "img_embedding = img_embedding(batch_img_tensor)\n",
-    "print(f\"img_encoding: {img_embedding.size()}\")\n",
+    "logger.info(f\"img_encoding: {img_embedding.size()}\")\n",
     "\n",
     "img_trans = ImgTransformer(config=config)\n",
     "batch_img_feature = img_trans(img_embedding)\n",
-    "print(f\"batch_img_feature: {batch_img_feature.size()}\")"
+    "logger.info(f\"batch_img_feature: {batch_img_feature.size()}\")"
    ]
   },
   {
