--- a/loss.ipynb
+++ b/loss.ipynb
@@ -47,6 +47,10 @@
     "\n",
     "\n",
     "\n",
+    "from common_util import get_logger\n",
+    "logger = get_logger(__name__)\n",
+    "\n",
+    "\n",
     "plt.rcParams[\"savefig.bbox\"] = 'tight'"
    ]
   },
@@ -66,7 +70,7 @@
    "source": [
     "log_it = torch.arange(16).view(4, -1)\n",
     "loss = constrastive_logit_loss(log_it)\n",
-    "print(loss)"
+    "logger.info(loss)"
    ]
   },
   {
@@ -89,7 +93,7 @@
     "l1 = torch.tensor([[0], [5], [10], [15]])\n",
     "l2 = torch.tensor([[6], [17], [28], [39]])\n",
     "l3 = l1 / l2\n",
-    "print(l3, l3.sum(), l3.sum() / 4)"
+    "logger.info(l3, l3.sum(), l3.sum() / 4)"
    ]
   },
   {
