--- a/multilabel_img_dataset.ipynb
+++ b/multilabel_img_dataset.ipynb
@@ -33,7 +33,11 @@
     "from img_embedding import ImageEmbedding\n",
     "from img_transformer import ImgTransformer\n",
     "from img_util import load_img_tensor, show_img_tensor_CHW\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
@@ -50,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"mps\")\n"
+    "device = torch.device(\"mps\")"
    ]
   },
   {
@@ -69,7 +73,7 @@
     "\n",
     "    batch_size = 20\n",
     "\n",
-    "    # Transfomer    \n",
+    "    # Transfomer\n",
     "    img_patch_size = 16\n",
     "    img_patches = (img_w_size // img_patch_size) * (img_h_size // img_patch_size)\n",
     "    img_patch_embedding = 728\n",
@@ -82,14 +86,21 @@
     "\n",
     "\n",
     "class MultiLabelImgeDataset(Dataset):\n",
-    "    def __init__(self, config: MultiLabelImgClassifierConfig, split: str = \"TRAIN\", train_eval_test_split = (0.9*0.8, 0.9*0.2, 0.1)):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config: MultiLabelImgClassifierConfig,\n",
+    "        split: str = \"TRAIN\",\n",
+    "        train_eval_test_split=(0.9 * 0.8, 0.9 * 0.2, 0.1),\n",
+    "    ):\n",
     "        super().__init__()\n",
-    "        self.config  = config\n",
-    "        self.df = pd.read_csv(config.root_dir/\"multilabel_classification(cheng).csv\")\n",
+    "        self.config = config\n",
+    "        self.df = pd.read_csv(config.root_dir / \"multilabel_classification(cheng).csv\")\n",
     "        self.split = split\n",
-    "        self.train_eval_test_split = train_eval_test_split \n",
-    "        train_split_index = int(len(self.df)*train_eval_test_split[0]) \n",
-    "        eval_split_index = int(len(self.df)*(train_eval_test_split[0]+train_eval_test_split[1])) \n",
+    "        self.train_eval_test_split = train_eval_test_split\n",
+    "        train_split_index = int(len(self.df) * train_eval_test_split[0])\n",
+    "        eval_split_index = int(\n",
+    "            len(self.df) * (train_eval_test_split[0] + train_eval_test_split[1])\n",
+    "        )\n",
     "        if split == \"TRAIN\":\n",
     "            self.df = self.df[:train_split_index]\n",
     "        elif split == \"EVAL\":\n",
@@ -100,50 +111,55 @@
     "\n",
     "        self.labels = list(self.df.columns[2:])\n",
     "        assert len(self.labels) == config.img_classes\n",
-    "        \n",
-    "        self.id_2_label = {i:label  for i, label in enumerate(self.labels)}\n",
-    "        self.label_2_id = {label:i  for i, label in enumerate(self.labels)}\n",
+    "\n",
+    "        self.id_2_label = {i: label for i, label in enumerate(self.labels)}\n",
+    "        self.label_2_id = {label: i for i, label in enumerate(self.labels)}\n",
     "\n",
     "    def _local_cache(self) -> Path:\n",
-    "        return  self.config.root_dir/\"cache\"\n",
-    "    \n",
+    "        return self.config.root_dir / \"cache\"\n",
+    "\n",
     "    def __len__(self):\n",
     "        return len(self.df)\n",
-    "    \n",
-    "    def get_item_img_file(self, index:int)->str:\n",
+    "\n",
+    "    def get_item_img_file(self, index: int) -> str:\n",
     "        index = index % len(self)\n",
     "        item = self.df.iloc[index]\n",
-    "        img_file_path = self.config.root_dir / \"images\"/ item[0]\n",
+    "        img_file_path = self.config.root_dir / \"images\" / item[0]\n",
     "        return img_file_path\n",
-    "    \n",
+    "\n",
     "    def __getitem__(self, index: int):\n",
     "        index = index % len(self)\n",
-    "    \n",
+    "\n",
     "        # check cache first\n",
-    "        if (self._local_cache()/f\"img_tensor_{index}.pt\").is_file() and (self._local_cache()/f\"label_tensor_{index}.pt\").is_file():\n",
-    "            img_tensor = torch.load(self._local_cache()/f\"img_tensor_{index}.pt\")\n",
-    "            label_tensor = torch.load(self._local_cache()/f\"label_tensor_{index}.pt\")\n",
+    "        if (self._local_cache() / f\"img_tensor_{index}.pt\").is_file() and (\n",
+    "            self._local_cache() / f\"label_tensor_{index}.pt\"\n",
+    "        ).is_file():\n",
+    "            img_tensor = torch.load(self._local_cache() / f\"img_tensor_{index}.pt\")\n",
+    "            label_tensor = torch.load(self._local_cache() / f\"label_tensor_{index}.pt\")\n",
     "        else:\n",
     "            item = self.df.iloc[index]\n",
-    "            img_file_path = self.config.root_dir / \"images\"/ item[0]\n",
-    "            img_tensor = load_img_tensor(config=self.config, img_file_path=img_file_path)\n",
+    "            img_file_path = self.config.root_dir / \"images\" / item[0]\n",
+    "            img_tensor = load_img_tensor(\n",
+    "                config=self.config, img_file_path=img_file_path\n",
+    "            )\n",
     "            label_tensor = torch.tensor(item[2:], dtype=torch.int)\n",
     "        return img_tensor, label_tensor\n",
-    "    \n",
-    "    def id_to_label(self, label_id: int)->str:\n",
+    "\n",
+    "    def id_to_label(self, label_id: int) -> str:\n",
     "        assert label_id in self.id_2_label\n",
     "        return self.id_2_label[label_id]\n",
-    "    \n",
     "\n",
-    "    def label_to_id(self, label: str)->int:\n",
+    "    def label_to_id(self, label: str) -> int:\n",
     "        assert label in self.label_2_id\n",
     "        return self.label_2_id[label]\n",
     "\n",
     "    def cache_data(self):\n",
     "        for idx, tensor in enumerate(self):\n",
-    "            img_tensor, label_tensor  = tensor\n",
+    "            img_tensor, label_tensor = tensor\n",
     "            torch.save(img_tensor, f\"{self.config.root_dir}/cache/img_tensor_{idx}.pt\")\n",
-    "            torch.save(label_tensor, f\"{self.config.root_dir}/cache/label_tensor_{idx}.pt\")"
+    "            torch.save(\n",
+    "                label_tensor, f\"{self.config.root_dir}/cache/label_tensor_{idx}.pt\"\n",
+    "            )"
    ]
   },
   {
@@ -166,14 +182,20 @@
     "train_dataset = MultiLabelImgeDataset(config=config, split=\"TRAIN\")\n",
     "eval_dataset = MultiLabelImgeDataset(config=config, split=\"EVAL\")\n",
     "test_dataset = MultiLabelImgeDataset(config=config, split=\"TEST\")\n",
-    "print(f\"train_dataset: {len(train_dataset)}\")\n",
-    "print(f\"eval_dataset: {len(eval_dataset)}\")\n",
-    "print(f\"test_dataset: {len(test_dataset)}\")\n",
-    "# print(train_dataset[0])\n",
+    "logger.info(f\"train_dataset: {len(train_dataset)}\")\n",
+    "logger.info(f\"eval_dataset: {len(eval_dataset)}\")\n",
+    "logger.info(f\"test_dataset: {len(test_dataset)}\")\n",
+    "# logger.info(train_dataset[0])\n",
     "\n",
-    "train_data_loader = DataLoader(dataset=train_dataset, batch_size=config.batch_size, shuffle=True)\n",
-    "eval_data_loader = DataLoader(dataset=eval_dataset, batch_size=config.batch_size, shuffle=True)\n",
-    "test_data_loader = DataLoader(dataset=test_dataset, batch_size=config.batch_size, shuffle=True)"
+    "train_data_loader = DataLoader(\n",
+    "    dataset=train_dataset, batch_size=config.batch_size, shuffle=True\n",
+    ")\n",
+    "eval_data_loader = DataLoader(\n",
+    "    dataset=eval_dataset, batch_size=config.batch_size, shuffle=True\n",
+    ")\n",
+    "test_data_loader = DataLoader(\n",
+    "    dataset=test_dataset, batch_size=config.batch_size, shuffle=True\n",
+    ")"
    ]
   },
   {
@@ -182,20 +204,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def viz_img_label_pred(dataset: MultiLabelImgeDataset, img_tensor: torch.tensor, target_tensor: torch.tensor, prediction: torch.tensor=None):\n",
+    "def viz_img_label_pred(\n",
+    "    dataset: MultiLabelImgeDataset,\n",
+    "    img_tensor: torch.tensor,\n",
+    "    target_tensor: torch.tensor,\n",
+    "    prediction: torch.tensor = None,\n",
+    "):\n",
     "    img_tensor = img_tensor.cpu()\n",
     "    target_tensor = target_tensor.cpu()\n",
     "    if prediction is not None:\n",
     "        prediction = prediction.cpu()\n",
     "\n",
-    "    print(img_tensor.size())\n",
-    "    print(target_tensor)\n",
+    "    logger.info(img_tensor.size())\n",
+    "    logger.info(target_tensor)\n",
     "    show_img_tensor_CHW(img_tensor=img_tensor)\n",
-    "    print(f\"target: {[dataset.id_to_label(i) for i, t in enumerate(target_tensor) if t]}\")\n",
+    "    logger.info(\n",
+    "        f\"target: {[dataset.id_to_label(i) for i, t in enumerate(target_tensor) if t]}\"\n",
+    "    )\n",
     "    if prediction:\n",
-    "        print(prediction)\n",
-    "        print(f\"prediction: {[dataset.id_2_label[i] for i, p in enumerate(prediction) if p]}\")\n",
-    "    "
+    "        logger.info(prediction)\n",
+    "        logger.info(\n",
+    "            f\"prediction: {[dataset.id_2_label[i] for i, p in enumerate(prediction) if p]}\"\n",
+    "        )"
    ]
   },
   {
@@ -240,8 +270,10 @@
     "for i in range(len(test_dataset)):\n",
     "    img_tensor, target_tensor = test_dataset[i]\n",
     "    img_file = test_dataset.get_item_img_file(i)\n",
-    "    print(f\"img_file: {img_file}\")\n",
-    "    viz_img_label_pred(dataset=test_dataset, img_tensor=img_tensor, target_tensor=target_tensor)\n",
+    "    logger.info(f\"img_file: {img_file}\")\n",
+    "    viz_img_label_pred(\n",
+    "        dataset=test_dataset, img_tensor=img_tensor, target_tensor=target_tensor\n",
+    "    )\n",
     "    break"
    ]
   },
@@ -272,8 +304,8 @@
    "source": [
     "data = next(iter(train_data_loader))\n",
     "batch_img_tensor, batch_label = data\n",
-    "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
-    "print(f\"batch_label: {batch_label.size()}\")"
+    "logger.info(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
+    "logger.info(f\"batch_label: {batch_label.size()}\")"
    ]
   },
   {
@@ -298,41 +330,57 @@
     "        self.img_transf = ImgTransformer(config=config)\n",
     "        self.dropout = nn.Dropout(config.img_dropout)\n",
     "        self.layer_norm1 = nn.LayerNorm(config.img_hidden)\n",
-    "        self.linear1 = nn.Linear(config.img_patches*config.img_patch_embedding, config.img_hidden, bias=True)\n",
+    "        self.linear1 = nn.Linear(\n",
+    "            config.img_patches * config.img_patch_embedding,\n",
+    "            config.img_hidden,\n",
+    "            bias=True,\n",
+    "        )\n",
     "        self.linear2 = nn.Linear(config.img_hidden, config.img_classes, bias=True)\n",
     "        self.act = nn.SiLU()\n",
     "        self.sig = nn.Sigmoid()\n",
     "\n",
-    "    def forward(self, batch_img_tensor: torch.tensor, batch_target_tensor: torch.tensor = None):\n",
+    "    def forward(\n",
+    "        self, batch_img_tensor: torch.tensor, batch_target_tensor: torch.tensor = None\n",
+    "    ):\n",
     "        \"\"\"\n",
     "        batch_img_tensor: B x H x W\n",
     "        batch_target_tensor: B x 16\n",
     "        \"\"\"\n",
-    "        batch_img_tensor = self.img_embedding(batch_img_tensor) # B x IMG_PATCHES x IMG_EMB\n",
-    "        B, IMG_PATCHES, IMG_EMB  = batch_img_tensor.size()\n",
+    "        batch_img_tensor = self.img_embedding(\n",
+    "            batch_img_tensor\n",
+    "        )  # B x IMG_PATCHES x IMG_EMB\n",
+    "        B, IMG_PATCHES, IMG_EMB = batch_img_tensor.size()\n",
     "        assert IMG_PATCHES == self.config.img_patches\n",
     "        assert IMG_EMB == self.config.img_patch_embedding\n",
     "\n",
-    "        batch_img_tensor = self.img_transf(batch_img_tensor) # B x IMG_PATCHES x IMG_EMB\n",
+    "        batch_img_tensor = self.img_transf(\n",
+    "            batch_img_tensor\n",
+    "        )  # B x IMG_PATCHES x IMG_EMB\n",
     "        assert batch_img_tensor.size() == (B, IMG_PATCHES, IMG_EMB)\n",
     "        batch_img_tensor = batch_img_tensor.contiguous().view(B, -1)\n",
     "\n",
-    "        batch_img_tensor = self.act(self.linear1(batch_img_tensor))  # B x IMG_PATCHES x IMG_HIDDEN\n",
+    "        batch_img_tensor = self.act(\n",
+    "            self.linear1(batch_img_tensor)\n",
+    "        )  # B x IMG_PATCHES x IMG_HIDDEN\n",
     "        batch_img_tensor = self.dropout(batch_img_tensor)\n",
     "        batch_img_tensor = self.layer_norm1(batch_img_tensor)\n",
-    "        pred = self.linear2(batch_img_tensor) # B x IMG_PATCHES x IMG_CLASSES\n",
+    "        pred = self.linear2(batch_img_tensor)  # B x IMG_PATCHES x IMG_CLASSES\n",
     "\n",
     "        # multi-label probability\n",
-    "        prob = self.sig(pred) # # B x IMG_PATCHES x IMG_EMB\n",
-    "        assert prob.size() == (B, self.config.img_classes), f\"Expect prob has size: {(B, self.config.img_classes)}, but get {prob.size()}\"\n",
+    "        prob = self.sig(pred)  # # B x IMG_PATCHES x IMG_EMB\n",
+    "        assert prob.size() == (\n",
+    "            B,\n",
+    "            self.config.img_classes,\n",
+    "        ), f\"Expect prob has size: {(B, self.config.img_classes)}, but get {prob.size()}\"\n",
     "\n",
     "        # loss\n",
     "        loss = None\n",
     "        if batch_target_tensor is not None:\n",
-    "            loss = torch.where(batch_target_tensor==1.0, -torch.log(prob), -torch.log(1-prob))\n",
+    "            loss = torch.where(\n",
+    "                batch_target_tensor == 1.0, -torch.log(prob), -torch.log(1 - prob)\n",
+    "            )\n",
     "            loss = loss.mean()\n",
-    "        return prob > 0.5, loss\n",
-    "\n"
+    "        return prob > 0.5, loss"
    ]
   },
   {
@@ -448,10 +496,12 @@
    "source": [
     "model = MultiLabelImgClassifier(config=config)\n",
     "pytorch_total_params = sum(p.numel() for p in model.parameters())\n",
-    "pytorch_total_trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"pytorch_total_params: {pytorch_total_params/10**6} m\")\n",
-    "print(f\"pytorch_total_trainable_params: {pytorch_total_trainable_params/10**6} m\")\n",
-    "count_parameters(model)\n"
+    "pytorch_total_trainable_params = sum(\n",
+    "    p.numel() for p in model.parameters() if p.requires_grad\n",
+    ")\n",
+    "logger.info(f\"pytorch_total_params: {pytorch_total_params/10**6} m\")\n",
+    "logger.info(f\"pytorch_total_trainable_params: {pytorch_total_trainable_params/10**6} m\")\n",
+    "count_parameters(model)"
    ]
   },
   {
@@ -477,10 +527,13 @@
     "lr = 0.001\n",
     "\n",
     "model = model.to(device)\n",
-    "optimizer = AdamW(params=model.parameters(), lr = lr)\n",
-    "scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=0.01, steps_per_epoch=len(train_data_loader), epochs=EPOCHES)\n",
+    "optimizer = AdamW(params=model.parameters(), lr=lr)\n",
+    "scheduler = torch.optim.lr_scheduler.OneCycleLR(\n",
+    "    optimizer, max_lr=0.01, steps_per_epoch=len(train_data_loader), epochs=EPOCHES\n",
+    ")\n",
     "\n",
-    "def eval(model: MultiLabelImgClassifier, train_step : int, writer: SummaryWriter):\n",
+    "\n",
+    "def eval(model: MultiLabelImgClassifier, train_step: int, writer: SummaryWriter):\n",
     "    model.eval()\n",
     "\n",
     "    avg_eval_loss = None\n",
@@ -505,32 +558,42 @@
     "    model.train()\n",
     "    writer.flush()\n",
     "    return avg_eval_loss, eval_loss_std\n",
-    "    \n",
     "\n",
     "\n",
     "def train(model: MultiLabelImgClassifier, writer: SummaryWriter):\n",
     "    best_vloss = torch.tensor(1_000_000)\n",
-    "    for epoch in range(EPOCHES): \n",
+    "    for epoch in range(EPOCHES):\n",
     "        for train_step, data in enumerate(train_data_loader):\n",
     "            batch_img_tensor, batch_target_tensor = data\n",
     "            batch_img_tensor = batch_img_tensor.to(device)\n",
     "            batch_target_tensor = batch_target_tensor.to(device)\n",
     "            optimizer.zero_grad()\n",
     "            pred, loss = model(batch_img_tensor, batch_target_tensor)\n",
-    "            writer.add_scalar(\"Learning Rate\", scheduler.get_last_lr()[-1], epoch * len(train_data_loader) + train_step)\n",
-    "            writer.add_scalar(\"Loss/train\", loss, epoch * len(train_data_loader) + train_step)\n",
+    "            writer.add_scalar(\n",
+    "                \"Learning Rate\",\n",
+    "                scheduler.get_last_lr()[-1],\n",
+    "                epoch * len(train_data_loader) + train_step,\n",
+    "            )\n",
+    "            writer.add_scalar(\n",
+    "                \"Loss/train\", loss, epoch * len(train_data_loader) + train_step\n",
+    "            )\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            scheduler.step()\n",
     "\n",
     "            if train_step > 0 and train_step % EVAL_INTERVAL == 0:\n",
-    "                avg_vloss, _ = eval(model=model, train_step= epoch * len(train_data_loader) + train_step, writer=writer)\n",
-    "            \n",
+    "                avg_vloss, _ = eval(\n",
+    "                    model=model,\n",
+    "                    train_step=epoch * len(train_data_loader) + train_step,\n",
+    "                    writer=writer,\n",
+    "                )\n",
+    "\n",
     "                if avg_vloss is not None and avg_vloss < best_vloss:\n",
     "                    best_vloss = avg_vloss\n",
-    "                    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "                    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "                    model_path = f\"multi_label_img_classifier_{epoch}_{timestamp}\"\n",
     "                    torch.save(model.state_dict(), model_path)\n",
+    "\n",
     "\n",
     "with SummaryWriter(flush_secs=1) as writer:\n",
     "    train(model=model, writer=writer)"
@@ -594,19 +657,28 @@
     "\n",
     "        test_pred, test_loss = model(batch_img_tensor, batch_target_tensor)\n",
     "\n",
-    "        for img_tensor, target_tensor, pred in zip(batch_img_tensor, batch_target_tensor, test_pred):\n",
-    "            img_tensor, target_tensor, pred = img_tensor.cpu(), target_tensor.cpu(), pred.cpu()\n",
-    "            print(img_tensor.size())\n",
-    "            print(pred)\n",
-    "            print(target_tensor)\n",
+    "        for img_tensor, target_tensor, pred in zip(\n",
+    "            batch_img_tensor, batch_target_tensor, test_pred\n",
+    "        ):\n",
+    "            img_tensor, target_tensor, pred = (\n",
+    "                img_tensor.cpu(),\n",
+    "                target_tensor.cpu(),\n",
+    "                pred.cpu(),\n",
+    "            )\n",
+    "            logger.info(img_tensor.size())\n",
+    "            logger.info(pred)\n",
+    "            logger.info(target_tensor)\n",
     "            show_img_tensor_CHW(img_tensor=img_tensor.cpu())\n",
-    "            print(f\"label: {[test_dataset.id_2_label[i] for i, t in enumerate(target_tensor) if t]}\")\n",
-    "            print(f\"prediction: {[test_dataset.id_2_label[i] for i, p in enumerate(pred) if p]}\")\n",
+    "            logger.info(\n",
+    "                f\"label: {[test_dataset.id_2_label[i] for i, t in enumerate(target_tensor) if t]}\"\n",
+    "            )\n",
+    "            logger.info(\n",
+    "                f\"prediction: {[test_dataset.id_2_label[i] for i, p in enumerate(pred) if p]}\"\n",
+    "            )\n",
     "            break\n",
-    "            \n",
     "\n",
     "        break\n",
-    "    model.train()\n"
+    "    model.train()"
    ]
   },
   {
