--- a/shakespeare_tokenizer.ipynb
+++ b/shakespeare_tokenizer.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from common_util import get_logger\n",
+    "\n",
+    "logger = get_logger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -113,8 +124,8 @@
    ],
    "source": [
     "chars = sorted(list(set(content)))\n",
-    "print(chars)\n",
-    "char_to_token = {c:index for index, c in enumerate(chars)}\n",
+    "logger.info(chars)\n",
+    "char_to_token = {c: index for index, c in enumerate(chars)}\n",
     "char_to_token"
    ]
   },
@@ -1144,9 +1155,9 @@
    ],
    "source": [
     "words = content.split(\" \")\n",
-    "print(f\"words: {len(words)}\")\n",
+    "logger.info(f\"words: {len(words)}\")\n",
     "words = set(words)\n",
-    "print(f\"unique words: {len(words)}\")\n",
+    "logger.info(f\"unique words: {len(words)}\")\n",
     "sorted(words)\n",
     "word_2_token = {word: index for index, word in enumerate(words)}\n",
     "word_2_token"
