--- a/text_casual_mask_transformer.ipynb
+++ b/text_casual_mask_transformer.ipynb
@@ -22,7 +22,11 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader"
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
@@ -58,10 +62,10 @@
     "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = (\n",
     "    next(iter(train_dataloader))\n",
     ")\n",
-    "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
-    "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")"
+    "logger.info(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
+    "logger.info(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
+    "logger.info(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "logger.info(f\"batch_comment_mask: {batch_comment_mask.size()}\")"
    ]
   },
   {
@@ -103,7 +107,7 @@
     }
    ],
    "source": [
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "logger.info(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
     "text_transformer(batch_comment_encoding)"
    ]
   },
