--- a/text_embedding.ipynb
+++ b/text_embedding.ipynb
@@ -27,7 +27,11 @@
     "from img_comment_dataset import ImgCommentDataset\n",
     "from text_token_embedding import TextTokenEmbedding\n",
     "\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
@@ -59,10 +63,10 @@
     "batch_img_tensor, batch_img_id_tensor, batch_comment_encoding, batch_comment_mask = (\n",
     "    next(iter(train_dataloader))\n",
     ")\n",
-    "print(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
-    "print(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "print(f\"batch_comment_mask: {batch_comment_mask.size()}\")"
+    "logger.info(f\"batch_img_tensor: {batch_img_tensor.size()}\")\n",
+    "logger.info(f\"batch_img_id_tensor: {batch_img_id_tensor.size()}\")\n",
+    "logger.info(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "logger.info(f\"batch_comment_mask: {batch_comment_mask.size()}\")"
    ]
   },
   {
@@ -84,8 +88,8 @@
    "source": [
     "text_token_embedding = TextTokenEmbedding(config=config)\n",
     "token_embedding = text_token_embedding(batch_comment_encoding)\n",
-    "print(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
-    "print(f\"token_embedding: {token_embedding.size()}\")"
+    "logger.info(f\"batch_comment_encoding: {batch_comment_encoding.size()}\")\n",
+    "logger.info(f\"token_embedding: {token_embedding.size()}\")"
    ]
   },
   {
