--- a/fliker_30k_img_comments.ipynb
+++ b/fliker_30k_img_comments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -27,12 +27,15 @@
     "from fliker_data_source import load_fliker_data_items\n",
     "from pathlib import Path\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader\n"
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "from common_util import get_logger\n",
+    "logger = get_logger(__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +49,7 @@
    "source": [
     "config = Config()\n",
     "fliker_data_items = load_fliker_data_items(config=config)\n",
-    "print(len(fliker_data_items))"
+    "logger.info(len(fliker_data_items))"
    ]
   },
   {
@@ -104,7 +107,7 @@
     "train_dataset = ImgCommentDataset(config, split=\"train\")\n",
     "eval_dataset = ImgCommentDataset(config, split=\"eval\")\n",
     "test_dataset = ImgCommentDataset(config, split=\"test\")\n",
-    "print(len(train_dataset), len(eval_dataset), len(test_dataset))"
+    "logger.info(len(train_dataset), len(eval_dataset), len(test_dataset))"
    ]
   },
   {
@@ -369,7 +372,7 @@
    ],
    "source": [
     "# for batch_data in train_dataloader:\n",
-    "#     print(train_dataloader)\n",
+    "#     logger.info(train_dataloader)\n",
     "#     break\n",
     "(\n",
     "    batch_img_aug_tensor1,\n",
@@ -378,19 +381,92 @@
     "    batch_text_encodings,\n",
     "    batch_text_masks,\n",
     ") = next(iter(train_dataloader))\n",
-    "print(f\"batch_img_aug_tensor1: {batch_img_aug_tensor1.size()}\")\n",
-    "print(f\"batch_img_aug_tensor2: {batch_img_aug_tensor2.size()}\")\n",
-    "print(f\"batch_img_id_tensors: {batch_img_id_tensors.size()}\")\n",
-    "print(f\"batch_text_encodings: {batch_text_encodings.size()}\")\n",
-    "print(f\"batch_text_masks: {batch_text_masks.size()}\")"
+    "logger.info(f\"batch_img_aug_tensor1: {batch_img_aug_tensor1.size()}\")\n",
+    "logger.info(f\"batch_img_aug_tensor2: {batch_img_aug_tensor2.size()}\")\n",
+    "logger.info(f\"batch_img_id_tensors: {batch_img_id_tensors.size()}\")\n",
+    "logger.info(f\"batch_text_encodings: {batch_text_encodings.size()}\")\n",
+    "logger.info(f\"batch_text_masks: {batch_text_masks.size()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3787)\n",
+      "tensor(2.4953)\n",
+      "tensor(2.1391)\n",
+      "tensor(2.2481)\n",
+      "tensor(2.3275)\n",
+      "tensor(1.9654)\n",
+      "tensor(1.5470)\n",
+      "tensor(2.5736)\n",
+      "tensor(2.2543)\n",
+      "tensor(2.7320)\n",
+      "tensor(2.2011)\n",
+      "tensor(2.5759)\n",
+      "tensor(2.4821)\n",
+      "tensor(2.3435)\n",
+      "tensor(1.8332)\n",
+      "tensor(2.1828)\n",
+      "tensor(2.4545)\n",
+      "tensor(2.1299)\n",
+      "tensor(2.7827)\n",
+      "tensor(3.4981)\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_text_mask_tensor = torch.randn(size=(20, 50))\n",
+    "input_max, max_indices = torch.max(target_text_mask_tensor, dim=1, keepdim=False)\n",
+    "for v in input_max:\n",
+    "    logger.info(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(target_text_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([15, 42, 15, 33, 11, 44, 48, 27, 41, 36, 41, 49, 46, 45, 13, 44, 42, 17,\n",
+       "         1,  7])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_indices"
+   ]
   },
   {
    "cell_type": "code",
