1. caption prediction use top_k_multinomial; 2. add data source tag; 3. add configuration debugging output; 4. add train.sh and test.sh; 5. refactoring

--- a/fliker_comment_tokenizer.ipynb
+++ b/fliker_comment_tokenizer.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "from config import Config\n",
     "from fliker_comment_tokenizer import FlikerCommentTokenizer\n",
+    "from img_comment_dataset import ImgCommentDataset\n",
     "from pathlib import Path\n",
     "from transformers import AutoTokenizer\n",
     "from tqdm import tqdm\n",
@@ -91,21 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tokens: 10000\n",
-      "tokenizer.is_fast: True\n",
-      "encoded: [2, 4, 2, 135, 148, 176, 149, 77, 0, 1]\n",
-      "decode: <bos><image><bos>cheng bai<pad><eos>\n"
+      "2024-09-29 12:32:07,378 - fliker_comment_tokenizer - INFO - tokens: 10000\n",
+      "2024-09-29 12:32:07,379 - fliker_comment_tokenizer - INFO - tokenizer.is_fast: True\n",
+      "2024-09-29 12:32:07,380 - __main__ - INFO - encoded: [2, 4, 2, 143, 152, 109, 197, 77, 0, 1]\n",
+      "2024-09-29 12:32:07,380 - __main__ - INFO - decode: <bos><image><bos>cheng bai<pad><eos>\n"
      ]
     }
    ],
    "source": [
+    "config = Config()\n",
     "new_fliker_comment_toeknizer = FlikerCommentTokenizer.get_tokenizer(config=config)\n",
     "\n",
     "# test_data = \"hello, 會 員\"\n",
@@ -143,34 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<pad>'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_fliker_comment_toeknizer.decode(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pad>\n"
+      "2024-09-29 12:29:37,937 - __main__ - INFO - <pad>\n"
      ]
     }
    ],
@@ -182,6 +164,84 @@
     "    if v == 0:\n",
     "        logger.info(k)\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verify encode and decode logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-09-29 12:32:19,652 - img_comment_dataset - INFO - Loaded 158915 fliker image-caption data items.\n",
+      "2024-09-29 12:32:21,573 - img_comment_dataset - INFO - Loaded 591753 coco image-caption data items.\n",
+      "2024-09-29 12:32:27,659 - img_comment_dataset - INFO - Loaded 768536 visual-genome image-caption data items.\n",
+      "2024-09-29 12:32:36,037 - img_comment_dataset - INFO - Loaded 158915 fliker image-caption data items.\n",
+      "2024-09-29 12:32:38,301 - img_comment_dataset - INFO - Loaded 591753 coco image-caption data items.\n",
+      "2024-09-29 12:32:44,255 - img_comment_dataset - INFO - Loaded 768536 visual-genome image-caption data items.\n",
+      "2024-09-29 12:32:52,839 - img_comment_dataset - INFO - Loaded 158915 fliker image-caption data items.\n",
+      "2024-09-29 12:32:54,678 - img_comment_dataset - INFO - Loaded 591753 coco image-caption data items.\n",
+      "2024-09-29 12:33:01,195 - img_comment_dataset - INFO - Loaded 768536 visual-genome image-caption data items.\n",
+      "2024-09-29 12:33:08,525 - __main__ - INFO - train_dataset: 1093826, eval_dataset: 273457, test_dataset: 151921\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dataset = ImgCommentDataset(config, split=\"train\")\n",
+    "eval_dataset = ImgCommentDataset(config, split=\"eval\")\n",
+    "test_dataset = ImgCommentDataset(config, split=\"test\")\n",
+    "logger.info(\n",
+    "    f\"train_dataset: {len(train_dataset)}, eval_dataset: {len(eval_dataset)}, test_dataset: {len(test_dataset)}\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-09-29 12:43:14,939 - __main__ - INFO - dataset_name: test\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 56%|█████▌    | 151921/273457 [00:06<00:05, 22053.18it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_name, dataset in [\n",
+    "    # (\"train\", train_dataset),\n",
+    "    # (\"eval\", eval_dataset),\n",
+    "    (\"test\", test_dataset),\n",
+    "]:\n",
+    "    logger.info(f\"dataset_name: {dataset_name}\")\n",
+    "    for source, comment in tqdm(\n",
+    "        zip(dataset.img_comments_df[\"source\"], dataset.img_comments_df[\"comment\"]),\n",
+    "        total=len(eval_dataset.img_comments_df),\n",
+    "    ):\n",
+    "        comment_encoded = new_fliker_comment_toeknizer.encode(comment)\n",
+    "        comment_decoded = new_fliker_comment_toeknizer.decode(comment_encoded)\n",
+    "    if f\"<bos>{comment}\" != comment_decoded:\n",
+    "        logger.info(\n",
+    "            f\"comment should be same as commend_decoded. source: {source}, comment: `{comment}`, comment_decoded: `{comment_decoded}`\"\n",
+    "        )\n",
+    "        # break"
    ]
   },
   {
