--- a/fliker_30k_img_comments.ipynb
+++ b/fliker_30k_img_comments.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "158915\n"
+      "2024-09-29 12:08:42,429 - __main__ - INFO - 158915\n"
      ]
     }
    ],
@@ -86,20 +86,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 158915 fliker image-caption data items.\n",
-      "Loaded 591753 coco image-caption data items.\n",
-      "Loaded 158915 fliker image-caption data items.\n",
-      "Loaded 591753 coco image-caption data items.\n",
-      "Loaded 158915 fliker image-caption data items.\n",
-      "Loaded 591753 coco image-caption data items.\n",
-      "540480 135121 75067\n"
+      "2024-09-29 12:08:49,402 - img_comment_dataset - INFO - Loaded 158915 fliker image-caption data items.\n",
+      "2024-09-29 12:08:51,272 - img_comment_dataset - INFO - Loaded 591753 coco image-caption data items.\n",
+      "2024-09-29 12:08:57,689 - img_comment_dataset - INFO - Loaded 768536 visual-genome image-caption data items.\n",
+      "2024-09-29 12:09:05,853 - img_comment_dataset - INFO - Loaded 158915 fliker image-caption data items.\n",
+      "2024-09-29 12:09:07,934 - img_comment_dataset - INFO - Loaded 591753 coco image-caption data items.\n",
+      "2024-09-29 12:09:13,974 - img_comment_dataset - INFO - Loaded 768536 visual-genome image-caption data items.\n",
+      "2024-09-29 12:09:22,345 - img_comment_dataset - INFO - Loaded 158915 fliker image-caption data items.\n",
+      "2024-09-29 12:09:24,216 - img_comment_dataset - INFO - Loaded 591753 coco image-caption data items.\n",
+      "2024-09-29 12:09:30,910 - img_comment_dataset - INFO - Loaded 768536 visual-genome image-caption data items.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "--- Logging error ---\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/logging/__init__.py\", line 1110, in emit\n",
+      "    msg = self.format(record)\n",
+      "          ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/logging/__init__.py\", line 953, in format\n",
+      "    return fmt.format(record)\n",
+      "           ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/logging/__init__.py\", line 687, in format\n",
+      "    record.message = record.getMessage()\n",
+      "                     ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/logging/__init__.py\", line 377, in getMessage\n",
+      "    msg = msg % self.args\n",
+      "          ~~~~^~~~~~~~~~~\n",
+      "TypeError: not all arguments converted during string formatting\n",
+      "Call stack:\n",
+      "  File \"<frozen runpy>\", line 198, in _run_module_as_main\n",
+      "  File \"<frozen runpy>\", line 88, in _run_code\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel_launcher.py\", line 18, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/traitlets/config/application.py\", line 992, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/kernelapp.py\", line 739, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tornado/platform/asyncio.py\", line 205, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/asyncio/base_events.py\", line 608, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/asyncio/base_events.py\", line 1936, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/asyncio/events.py\", line 84, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 545, in dispatch_queue\n",
+      "    await self.process_one()\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 534, in process_one\n",
+      "    await dispatch(*args)\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 437, in dispatch_shell\n",
+      "    await result\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/ipkernel.py\", line 362, in execute_request\n",
+      "    await super().execute_request(stream, ident, parent)\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/kernelbase.py\", line 778, in execute_request\n",
+      "    reply_content = await reply_content\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/ipkernel.py\", line 449, in do_execute\n",
+      "    res = shell.run_cell(\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/ipykernel/zmqshell.py\", line 549, in run_cell\n",
+      "    return super().run_cell(*args, **kwargs)\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3051, in run_cell\n",
+      "    result = self._run_cell(\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3106, in _run_cell\n",
+      "    result = runner(coro)\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/IPython/core/async_helpers.py\", line 129, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3311, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3493, in run_ast_nodes\n",
+      "    if await self.run_code(code, result, async_=asy):\n",
+      "  File \"/opt/anaconda3/envs/torch/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/46/4yv_0b8n161097gg93qqvb6w0000gn/T/ipykernel_8612/2279498988.py\", line 4, in <module>\n",
+      "    logger.info(len(train_dataset), len(eval_dataset), len(test_dataset))\n",
+      "Message: 1093826\n",
+      "Arguments: (273457, 151921)\n"
      ]
     }
    ],
@@ -107,12 +177,14 @@
     "train_dataset = ImgCommentDataset(config, split=\"train\")\n",
     "eval_dataset = ImgCommentDataset(config, split=\"eval\")\n",
     "test_dataset = ImgCommentDataset(config, split=\"test\")\n",
-    "logger.info(len(train_dataset), len(eval_dataset), len(test_dataset))"
+    "logger.info(\n",
+    "    f\"train_dataset: {len(train_dataset)}, eval_dataset: {len(eval_dataset)}, test_dataset: {len(test_dataset)}\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +208,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>source</th>\n",
        "      <th>image_name</th>\n",
        "      <th>comment_number</th>\n",
        "      <th>comment</th>\n",
@@ -145,6 +218,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>fliker30k</td>\n",
        "      <td>/Users/chengbai/ml/dataset/flickr30k_images/fl...</td>\n",
        "      <td>0</td>\n",
        "      <td>Two young guys with shaggy hair look at their ...</td>\n",
@@ -152,6 +226,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>fliker30k</td>\n",
        "      <td>/Users/chengbai/ml/dataset/flickr30k_images/fl...</td>\n",
        "      <td>1</td>\n",
        "      <td>Two young , White males are outside near many ...</td>\n",
@@ -159,6 +234,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>fliker30k</td>\n",
        "      <td>/Users/chengbai/ml/dataset/flickr30k_images/fl...</td>\n",
        "      <td>2</td>\n",
        "      <td>Two men in green shirts are standing in a yard .</td>\n",
@@ -166,6 +242,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>fliker30k</td>\n",
        "      <td>/Users/chengbai/ml/dataset/flickr30k_images/fl...</td>\n",
        "      <td>3</td>\n",
        "      <td>A man in a blue shirt standing in a garden .</td>\n",
@@ -173,6 +250,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>fliker30k</td>\n",
        "      <td>/Users/chengbai/ml/dataset/flickr30k_images/fl...</td>\n",
        "      <td>4</td>\n",
        "      <td>Two friends enjoy time spent together .</td>\n",
@@ -184,84 +262,126 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540475</th>\n",
-       "      <td>/Users/chengbai/ml/dataset/coco/train2017/0000...</td>\n",
-       "      <td>191028</td>\n",
-       "      <td>Fruits and vegetables sitting in a bowl on a c...</td>\n",
-       "      <td>191028</td>\n",
+       "      <th>1093821</th>\n",
+       "      <td>visual_genome</td>\n",
+       "      <td>/Users/chengbai/ml/dataset/visual_genome/23710...</td>\n",
+       "      <td>2371055</td>\n",
+       "      <td>THE CABINETS ARE YELLOW</td>\n",
+       "      <td>2371055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540476</th>\n",
-       "      <td>/Users/chengbai/ml/dataset/coco/train2017/0000...</td>\n",
-       "      <td>191042</td>\n",
-       "      <td>A few people are playing a game of frisbee.</td>\n",
-       "      <td>191042</td>\n",
+       "      <th>1093822</th>\n",
+       "      <td>visual_genome</td>\n",
+       "      <td>/Users/chengbai/ml/dataset/visual_genome/23710...</td>\n",
+       "      <td>2371055</td>\n",
+       "      <td>THE TILE IS ON THE WALL</td>\n",
+       "      <td>2371055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540477</th>\n",
-       "      <td>/Users/chengbai/ml/dataset/coco/train2017/0000...</td>\n",
-       "      <td>191047</td>\n",
-       "      <td>Two zebras prance through a seemingly abandone...</td>\n",
-       "      <td>191047</td>\n",
+       "      <th>1093823</th>\n",
+       "      <td>visual_genome</td>\n",
+       "      <td>/Users/chengbai/ml/dataset/visual_genome/23710...</td>\n",
+       "      <td>2371055</td>\n",
+       "      <td>THE HANDLES ARE SILVER</td>\n",
+       "      <td>2371055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540478</th>\n",
-       "      <td>/Users/chengbai/ml/dataset/coco/train2017/0000...</td>\n",
-       "      <td>191054</td>\n",
-       "      <td>Three zebras are standing near a lake as they ...</td>\n",
-       "      <td>191054</td>\n",
+       "      <th>1093824</th>\n",
+       "      <td>visual_genome</td>\n",
+       "      <td>/Users/chengbai/ml/dataset/visual_genome/23710...</td>\n",
+       "      <td>2371055</td>\n",
+       "      <td>man is in the kitchen</td>\n",
+       "      <td>2371055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540479</th>\n",
-       "      <td>/Users/chengbai/ml/dataset/coco/train2017/0000...</td>\n",
-       "      <td>191059</td>\n",
-       "      <td>A group of zebras graze on grass in the zoo.</td>\n",
-       "      <td>191059</td>\n",
+       "      <th>1093825</th>\n",
+       "      <td>visual_genome</td>\n",
+       "      <td>/Users/chengbai/ml/dataset/visual_genome/23710...</td>\n",
+       "      <td>2371053</td>\n",
+       "      <td>train on the tracks</td>\n",
+       "      <td>2371053</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>540480 rows × 4 columns</p>\n",
+       "<p>1093826 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               image_name  comment_number  \\\n",
-       "0       /Users/chengbai/ml/dataset/flickr30k_images/fl...               0   \n",
-       "1       /Users/chengbai/ml/dataset/flickr30k_images/fl...               1   \n",
-       "2       /Users/chengbai/ml/dataset/flickr30k_images/fl...               2   \n",
-       "3       /Users/chengbai/ml/dataset/flickr30k_images/fl...               3   \n",
-       "4       /Users/chengbai/ml/dataset/flickr30k_images/fl...               4   \n",
-       "...                                                   ...             ...   \n",
-       "540475  /Users/chengbai/ml/dataset/coco/train2017/0000...          191028   \n",
-       "540476  /Users/chengbai/ml/dataset/coco/train2017/0000...          191042   \n",
-       "540477  /Users/chengbai/ml/dataset/coco/train2017/0000...          191047   \n",
-       "540478  /Users/chengbai/ml/dataset/coco/train2017/0000...          191054   \n",
-       "540479  /Users/chengbai/ml/dataset/coco/train2017/0000...          191059   \n",
+       "                source                                         image_name  \\\n",
+       "0            fliker30k  /Users/chengbai/ml/dataset/flickr30k_images/fl...   \n",
+       "1            fliker30k  /Users/chengbai/ml/dataset/flickr30k_images/fl...   \n",
+       "2            fliker30k  /Users/chengbai/ml/dataset/flickr30k_images/fl...   \n",
+       "3            fliker30k  /Users/chengbai/ml/dataset/flickr30k_images/fl...   \n",
+       "4            fliker30k  /Users/chengbai/ml/dataset/flickr30k_images/fl...   \n",
+       "...                ...                                                ...   \n",
+       "1093821  visual_genome  /Users/chengbai/ml/dataset/visual_genome/23710...   \n",
+       "1093822  visual_genome  /Users/chengbai/ml/dataset/visual_genome/23710...   \n",
+       "1093823  visual_genome  /Users/chengbai/ml/dataset/visual_genome/23710...   \n",
+       "1093824  visual_genome  /Users/chengbai/ml/dataset/visual_genome/23710...   \n",
+       "1093825  visual_genome  /Users/chengbai/ml/dataset/visual_genome/23710...   \n",
        "\n",
-       "                                                  comment  image_id  \n",
-       "0       Two young guys with shaggy hair look at their ...         0  \n",
-       "1       Two young , White males are outside near many ...         0  \n",
-       "2        Two men in green shirts are standing in a yard .         0  \n",
-       "3            A man in a blue shirt standing in a garden .         0  \n",
-       "4                 Two friends enjoy time spent together .         0  \n",
-       "...                                                   ...       ...  \n",
-       "540475  Fruits and vegetables sitting in a bowl on a c...    191028  \n",
-       "540476        A few people are playing a game of frisbee.    191042  \n",
-       "540477  Two zebras prance through a seemingly abandone...    191047  \n",
-       "540478  Three zebras are standing near a lake as they ...    191054  \n",
-       "540479       A group of zebras graze on grass in the zoo.    191059  \n",
+       "         comment_number                                            comment  \\\n",
+       "0                     0  Two young guys with shaggy hair look at their ...   \n",
+       "1                     1  Two young , White males are outside near many ...   \n",
+       "2                     2   Two men in green shirts are standing in a yard .   \n",
+       "3                     3       A man in a blue shirt standing in a garden .   \n",
+       "4                     4            Two friends enjoy time spent together .   \n",
+       "...                 ...                                                ...   \n",
+       "1093821         2371055                            THE CABINETS ARE YELLOW   \n",
+       "1093822         2371055                            THE TILE IS ON THE WALL   \n",
+       "1093823         2371055                             THE HANDLES ARE SILVER   \n",
+       "1093824         2371055                              man is in the kitchen   \n",
+       "1093825         2371053                                train on the tracks   \n",
        "\n",
-       "[540480 rows x 4 columns]"
+       "         image_id  \n",
+       "0               0  \n",
+       "1               0  \n",
+       "2               0  \n",
+       "3               0  \n",
+       "4               0  \n",
+       "...           ...  \n",
+       "1093821   2371055  \n",
+       "1093822   2371055  \n",
+       "1093823   2371055  \n",
+       "1093824   2371055  \n",
+       "1093825   2371053  \n",
+       "\n",
+       "[1093826 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_dataset.img_comments_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-09-29 12:12:28,942 - __main__ - INFO - train_df_file: /tmp/train_df.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "for df_file, df in [\n",
+    "    (\"/tmp/train_df.csv\", train_dataset.img_comments_df),\n",
+    "    (\"/tmp/train_df.csv\", train_dataset.img_comments_df),\n",
+    "    (\"/tmp/train_df.csv\", train_dataset.img_comments_df),\n",
+    "]:\n",
+    "    df.to_csv(df_file, sep=\"\\t\")\n",
+    "    logger.info(f\"df_file: {df_file}\")"
    ]
   },
   {
