Refactor the model file into vlm_img_lang_model and vlm_img_caption_model

--- a/loss.ipynb
+++ b/loss.ipynb
@@ -35,7 +35,7 @@
     "from text_casual_mask_transformer import TextMaskedTransformer\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from tqdm import tqdm\n",
-    "from vlm_model import ImgLanguageModel\n",
+    "from vlm_img_lang_model import ImgLanguageModel\n",
     "from loss import constrastive_logit_loss\n",
     "\n",
     "import torch\n",
