--- a/lm_test.ipynb
+++ b/lm_test.ipynb
@@ -40,7 +40,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from train_settings import TrainSettings\n",
     "from tqdm import tqdm\n",
-    "from vlm_model import ImgLanguageModel\n",
+    "from vlm_img_caption_model import ImgLanguageModel\n",
     "from vlm_train import train_model\n",
     "\n",
     "import torch\n",
