--- a/lm_test.ipynb
+++ b/lm_test.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/anaconda3/envs/torch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ImgLanguageModel' from 'vlm_img_caption_model' (/Users/chengbai/ml/cheng_git/notebooks/vlm_img_caption_model.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrain_settings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TrainSettings\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[0;32m---> 26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvlm_img_caption_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ImgLanguageModel\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvlm_train\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_model\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ImgLanguageModel' from 'vlm_img_caption_model' (/Users/chengbai/ml/cheng_git/notebooks/vlm_img_caption_model.py)"
      ]
     }
    ],
@@ -40,7 +51,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from train_settings import TrainSettings\n",
     "from tqdm import tqdm\n",
-    "from vlm_img_caption_model import ImgLanguageModel\n",
+    "from vlm_img_lang_model import ImgLanguageModel\n",
     "from vlm_train import train_model\n",
     "\n",
     "import torch\n",
