Branch for gradient-accumulation

--- a/fliker_30k_img_comments.ipynb
+++ b/fliker_30k_img_comments.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "#     config.fliker_img_comments_foxlder / \"results.csv\"\n",
     "# )  # /Users/chengbai/ml/dataset/flickr30k_images/results.csv\n",
     "# imgs_folder = (\n",
-    "#     config.fliker_img_comments_folder / \"flickr30k_images\"\n",
+    "#     Path(config.fliker_img_comments_folder) / \"flickr30k_images\"\n",
     "# )  # /Users/chengbai/ml/dataset/flickr30k_images/flickr30k_images\n",
     "\n",
     "# list(imgs_folder.glob(\"*.jpg\"))[:2]"
